crates/compiler/src/tests/e2e/good/0435_trait_printable_impl/main.gom
trait Printable {
    fn print(Self) -> unit;
}

struct Msg { text: string }
impl Printable for Msg { fn print(self: Msg) -> unit { println(self.text); } }

fn print_twice[T: Printable](x: T) {
    Printable::print(x);
    Printable::print(x);
}

fn main() {
    print_twice(Msg { text: "hello" });
}
