crates/compiler/src/tests/e2e/bad/0562_go_error_last_wrong_return/main.gom
extern "go" "time" "Duration" type Duration

#[go_error_last]
extern "go" "time" "ParseDuration" parse_duration(s: string) -> Duration

fn main() -> unit {
    ()
}
